Use SNI based routing with tcp proxies
- use sni tls inspector
- use sni upstream cluster set for routing
- sue tcp proxy for the ingress

--- a/app1-envoy.yaml
+++ b/app1-envoy.yaml
@@ -1,6 +1,6 @@
 node:
   cluster: test-chute
-  id: egress-envoy
+  id: app1-envoy
 static_resources:
   listeners:
   - address:
@@ -42,6 +42,7 @@ static_resources:
                 address: ingress-envoy
                 port_value: 6379
     tls_context:
+      sni: "redis1"
       common_tls_context:
         tls_certificate_sds_secret_configs:
         - name: client_cert
