--- a/ingress-envoy.yaml
+++ b/ingress-envoy.yaml
@@ -7,22 +7,16 @@ static_resources:
       socket_address:
         address: 0.0.0.0
         port_value: 6379
+    listener_filters:
+      - name: "envoy.listener.tls_inspector"
     filter_chains:
       filters:
-        - name: envoy.redis_proxy
+        - name: envoy.filters.network.sni_cluster
+        - name: envoy.tcp_proxy
           typed_config:
-            "@type": type.googleapis.com/envoy.config.filter.network.redis_proxy.v2.RedisProxy
+            "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
             stat_prefix: ingress_envoy
-            prefix_routes:
-              routes:
-                - prefix: "1:"
-                  cluster: redis1
-                - prefix: "2:"
-                  cluster: redis2
-              catch_all_route: 
-                cluster: redis1
-            settings:
-              op_timeout: 5s              
+            cluster: redis1
       tls_context:
         common_tls_context:
           tls_certificate_sds_secret_configs:
